Scrollbar dragging when pinch-zoomed in does not work with slider.snapMultiplier
Categories
(Core :: Panning and Zooming, defect)
Tracking
()
People
(Reporter: srazin123, Assigned: ajakobi)
References
Details
Attachments
(3 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:105.0) Gecko/20100101 Firefox/105.0
Steps to reproduce:
This happens most of the time; sometimes the expected result happens.
- Open the attached html file.
- Zoom-in to the div element using touchpad.
- Try to scroll the inside of div element by click and drag the scrollbars.
Actual results:
You can't scroll by click and drag (other ways work).
Expected results:
You should be able to scroll by click and drag.
Comment 1•3 years ago
|
||
I can confirm this issue using latest Nightly 107.0a1, under Win 10 x64. I ran mozregression in order to find what lead to this behavior, and it seems that something changed between 2020-08-18 and 2020-08-19. The issue is not reproducing on an older Nightly (20200209215935), but unfortunately I cannot bisect any further due to a mozregression error.
Hi Botond Ballo! I see that a couple of patches landed in that timeframe related to scrollbars, can any of those be the regressor for this issue?
Comment 2•3 years ago
|
||
Doesn't seem to reproduce on mac for me. But I can reproduce on Windows.
I can reproduce the bug on 2020-06-01 and 2020-08-01 builds (before the regression range). Testing around this time one needs to be careful because this when we were enabling pinch zooming and direct manipulation (to be able to pinch zoom). So in my testing I set the prefs apz.allow_zooming:true and apz.windows.use_direct_manipulation:true.
Weirdly if I set mousewheel.with_control.action:5 and use the mouse wheel plus control to zoom in the bug doesn't seem to happen. But the scrollbars look a little weird, so something must be different.
Comment 3•3 years ago
|
||
The issue is related to the slider.snapMultiplier feature, which is only enabled by default on Windows. However, I can reproduce the issue on Linux by setting the pref slider.snapMultiplier to 6 (same value as Windows).
With that pref set, I can also reproduce the issue going back further than the regression range from comment 1 (as early as 2020-05-06, which seems to be the first build where "scrollbar dragging while zoomed in" is usable at all, due to bug 1556556 landing).
I think it's fair to say that the combination of pinch-zooming + scrollbar dragging + slider.snapMultiplier + WebRender has never worked properly.
I suspect the place in the code that needs fixing is here. The claim "resolution doesn't apply to scrollbars" does not hold for subframe scrollbars.
Comment 4•3 years ago
•
|
||
Meanwhile, if you don't actually use the slider.snapMultiplier feature (that's the feature where e.g. moving the mouse horizontally away from a vertical scrollbar causes it to snap back to its position at the beginning of the drag), then a workaround for this bug is to go to about:config and set the pref slider.snapMultiplier to 0. Note, the pref requires a restart for a change to take effect.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 5•2 years ago
|
||
| Assignee | ||
Comment 6•2 years ago
|
||
Comment 8•2 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/1aa00f4dbe20
https://hg.mozilla.org/mozilla-central/rev/b7451f6f9a4f
Comment 9•2 years ago
|
||
Thank you Alex for fixing this!
Updated•2 years ago
|
Updated•2 years ago
|
Reproducible on a 2023-07-30 Nightly build on Windows 10.
Verified as fixed on Firefox 118.0b2(20230829180158) and Nightly 119.0a1(20230830212731) on Windows 10, macOS 12, Ubuntu 22.
Scrollbars are now working as intended whilst using touchpad by click and drag.
Description
•