Bug 1794590 - Change mirror value for slider.snapMultiplier r=botond

Differential Revision: https://phabricator.services.mozilla.com/D184735